[tool.poetry]
name = "centex-hamiltonian-streamlit"
version = "0.1.0"
description = "Streamlit app for the TlF hamiltonian"
authors = ["ograsdijk <o.grasdijk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
streamlit = "^1.35.0"
plotly = "^5.22.0"
centrex-tlf = "^0.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
